@@ -107,6 +107,11 @@ Core and Builtins
 Library
 -------
 
+- Issue #26864: In urllib.request, change the proxy bypass host checking
+  against no_proxy to be case-insensitive, and to not match unrelated host
+  names that happen to have a bypassed hostname as a suffix.  Patch by Xiang
+  Zhang.
+
 - Issue #26634: recursive_repr() now sets __qualname__ of wrapper.  Patch by
   Xiang Zhang.
 
